# labs-and-practices-2-sem

./: README.md
lab 2 string/: CustomString.cpp  CustomString.h  lab2_string.cpp
lab 3 complex/: comlex_num.h  complex_num.cpp  lab_3_complex.cpp
lab 4 matrix/: CMakeLists.txt  main.cpp
lab 4 matrix/inc/: matrix.h
lab1_animatetext/: CMakeLists.txt  main.cpp
lab1_animatetext/inc/: animation.h
lab1_animatetext/src/: animation.cpp
lab5_boolvek/: CMakeLists.txt  main.cpp
lab5_boolvek/inc/: vectorBool.h
lab7_figure/: main.cpp
lab7_figure/inc/: shape.h
lab8_stack/: CMakeLists.txt  main.cpp
lab8_stack/inc/: egil_stack.h
prac_1_shifr/: main.cpp
prac_3_cinematic/: CMakeLists.txt  main.cpp
prac_4_house/: CMakeLists.txt  list.txt  main.cpp
task 2 fast copy/: fast_copy.cpp
